2002-09-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (w3mhack-examine-modules): Do not compile
	`mew-shimbun.el' with old Mew.

	* mew-w3m.el (top): Avoid byte-compile error and warning for old
	Mew. Do not push 'mew-w3m-cid-retrieve' for old Mew.
	
2002-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-arrived-setup): Use 0 instead of nil as the initial
	value for the new obarray.

	* w3m-filter.el (w3m-filter-setup): Use 0 instead of nil as the
	initial value for the new obarray.

2002-09-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (top): Add comment for expire.
	(mew-shimbun-expires): New user variable.
	(mew-shimbun-expire-all, mew-shimbun-expire) 
	(mew-shimbun-expire-day): New functions.

2002-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-mode): Fix typo in its docstring.

2002-09-20  Kahlil HODGSON  <dorge@tpg.com.au>

	* w3m.el (w3m-fontify-bold): Permit class attributes, newlines or
	whitespaces in the tag.
	(w3m-fontify-underline): Ditto.

2002-09-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-treat-drive-letter): New constant.
	(w3m-url-to-file-name): Check `w3m-treat-drive-letter'.

	* w3m-dtree.el (w3m-dtree-directory-name): Check
	`w3m-treat-drive-letter'.

2002-09-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-rules): Add 'assahi shimbun' rule.
	(w3m-filter-asahi-shimbun): New function.

2002-09-10  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-unseen-remove-one): Use
	`mew-cinfo-set-fld|msg|time|size' instead of `mew-cinfo-set'.

2002-09-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-setup): Check new entries registered
	in `w3m-antenna-sites'.
	(w3m-antenna-shutdown): Return the value of `w3m-antenna-alist'.
	(w3m-antenna-check-all-sites): Simplified.
	(w3m-about-antenna): Do not call `w3m-antenna-setup'.

2002-09-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
